Added : Required Functions For Project
